Make <abbr>s look (almost) the same across browsers (in RWS)

--- a/static/Ranking.css
+++ b/static/Ranking.css
@@ -23,6 +23,9 @@ a {
     outline: none;
 }
 
+abbr {
+    border-bottom: 1px dotted white;
+}
 
 /******************************************************************************\
 |                                                                              |
