Refactor UserDetail.js (part of the client of RWS)

--- a/static/Ranking.css
+++ b/static/Ranking.css
@@ -867,38 +867,38 @@ abbr {
 \******************************************************************************/
 
 
-body .UserPanel_bg {
+#UserDetail_bg {
     display: none;
-}
-
-body.user_panel .UserPanel_bg {
-    display: block;
-}
-
-.UserPanel_bg {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    z-index: 1000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 500;
     background-color: rgba(0,0,0,0.5);
-    overflow: auto;
+    overflow-y: scroll;
     /* the following two lines are for IE */
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#80000000, endColorstr=#80000000)";
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#80000000, endColorstr=#80000000);
 }
 
-.UserPanel {
-    width: 940px;
-    margin: 48px auto;
-    background-color: white;
-    border-radius: 12px;
-    padding: 20px;
-    position: relative;
+#UserDetail_bg.open {
+    display: block;
 }
 
-.UserPanel .close {
+#UserDetail {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 920px;
+    margin: 48px auto;
+    padding: 20px;
+    border-radius: 12px;
+    background-color: white;
+}
+
+#UserDetail_close {
     position: absolute;
     top: -10px;
     right: -10px;
@@ -907,107 +907,110 @@ body.user_panel .UserPanel_bg {
     cursor: pointer;
 }
 
-.UserPanel .header {
-    display: table;
-    table-layout: fixed;
-    width: 100%;
-    border-spacing: 0;
-    vertical-align: top;
+#UserDetail_header {
+    position: relative;
+    min-height: 242px;
 }
 
-.UserPanel .summary {
-    display: table-cell;
-    width: 460px;
-    height: 242px;
-    text-align: right;
-}
-
-.UserPanel .summary .f_name,
-.UserPanel .summary .l_name,
-.UserPanel .summary .team {
+#UserDetail_f_name,
+#UserDetail_l_name,
+#UserDetail_team,
+#UserDetail_flag {
+    position: absolute;
+    right: 470px;
     font-size: 2em;
     line-height: 1.5em;
 }
 
-.UserPanel .summary .team {
-    margin-top: 32px;
+#UserDetail_f_name {
+    top: 0;
 }
 
-.UserPanel .summary .face {
+#UserDetail_l_name {
+    top: 1.5em;
+}
+
+#UserDetail_team {
+    bottom: 100px;
+}
+
+#UserDetail_flag {
+    bottom: 0;
+}
+
+#UserDetail_face {
     position: absolute;
-    top: 21px;
-    left: 21px;
+    top: 0;
+    left: 0;
     max-width: 160px;
     max-height: 240px;
-    box-shadow: 0 0 2px 1px gray;
 }
 
-.UserPanel .summary .flag {
-    margin: 1px;
-    box-shadow: 0 0 2px 1px gray;
+#UserDetail_flag {
+    margin: -1px;
+    border: 1px solid gray;
 }
 
-.UserPanel .summary .flag.hidden {
+#UserDetail_flag.hidden {
     display: none;
 }
 
-.UserPanel .scores {
-    display: table-cell;
-    width: 460px;
-    padding-left: 20px;
+#UserDetail_navigator {
+    width: 450px;
+    margin-left: 470px;
 }
 
-.UserPanel .scores .score_table {
+#UserDetail_navigator table {
     width: 100%;
     table-layout: fixed;
     border-spacing: 2px;
 }
 
-.UserPanel .scores td {
+#UserDetail_navigator tr {
     height: 22px;
 }
 
-.UserPanel .scores col.name {
+#UserDetail_navigator col.name {
     width: 60%;
 }
 
-.UserPanel .scores col.score,
-.UserPanel .scores col.rank {
+#UserDetail_navigator col.score,
+#UserDetail_navigator col.rank {
     width: 12%;
 }
 
-.UserPanel .scores col.show {
+#UserDetail_navigator col.show {
     width: 14%;
 }
 
-.UserPanel .scores tr td.score,
-.UserPanel .scores tr td.rank {
+#UserDetail_navigator tr td.score,
+#UserDetail_navigator tr td.rank {
     padding-left: 4px;
 }
 
-.UserPanel .scores tbody tr td.btn {
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -o-user-select: none;
-    user-select: none;
+#UserDetail_navigator tbody tr td.btn {
     text-align: center;
     border: 1px solid #999999;
-    box-shadow: 0 0 1px 0 gray;
+    box-shadow: 0 0 2px gray;
     background-color: #EEEEEE;
     border-radius: 3px;
     cursor: pointer;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+         -o-user-select: none;
+            user-select: none;
 }
 
-.UserPanel .scores tbody tr td.btn:hover {
+#UserDetail_navigator tbody tr td.btn:hover {
     background-color: #DDDDDD;
 }
 
-.UserPanel .scores tbody tr td.btn:active {
+#UserDetail_navigator tbody tr td.btn:active {
     background-color: #CCCCCC;
 }
 
-.UserPanel .scores tbody tr td.btn.active {
+#UserDetail_navigator tbody tr.active td.btn {
     background-color: #EEEEEE;
     opacity: 0.4;
     cursor: default;
@@ -1016,68 +1019,78 @@ body.user_panel .UserPanel_bg {
     filter: alpha(opacity=40);
 }
 
-.UserPanel .scores tr.global {
+#UserDetail_navigator tr.global {
     background-color: #DDDDDD;
 }
 
-.UserPanel .scores tr.contest {
+#UserDetail_navigator tr.contest {
     background-color: #EEEEEE;
 }
 
-.UserPanel .scores tr.task {
+#UserDetail_navigator tr.task {
     background-color: #FFFFFF;
 }
 
-.UserPanel .scores tr.global td:first-child {
+#UserDetail_navigator tr.global td.name {
     padding-left: 5px;
 }
 
-.UserPanel .scores tr.contest td:first-child {
+#UserDetail_navigator tr.contest td.name {
     padding-left: 25px;
 }
 
-.UserPanel .scores tr.task td:first-child {
+#UserDetail_navigator tr.task td.name {
     padding-left: 45px;
 }
 
-.UserPanel .title {
+#UserDetail_title {
     margin-top: 24px;
     font-size: 2em;
     line-height: 1.5em;
     text-align: center;
 }
 
-.UserPanel .submits {
+#UserDetail_charts {
     margin-top: 24px;
     width: 100%;
 }
 
-.UserPanel .submits table {
+#UserDetail_submissions {
+    margin-top: 24px;
+    width: 100%;
+}
+
+#UserDetail_submissions:empty {
+    margin-top: 0;
+}
+
+#UserDetail_submissions table {
     width: 100%;
     table-layout: fixed;
 }
 
-.UserPanel .submits td {
+#UserDetail_submissions td {
     height: 22px;
     padding-left: 4px;
 }
 
-.UserPanel .submits thead {
+#UserDetail_submissions thead {
     background-color: #DDDDDD;
 }
 
-.UserPanel .submits tbody tr:nth-child(even) {
+#UserDetail_submissions tbody tr:nth-child(even) {
     background-color: #EEEEEE;
 }
 
-.UserPanel .submits tbody tr:nth-child(odd) {
+#UserDetail_submissions tbody tr:nth-child(odd) {
     background-color: #F8F8F8;
 }
 
-.UserPanel .charts {
-    margin-top: 24px;
-    width: 100%;
+#UserDetail_submissions tbody td[colspan] {
+    text-align: center;
+    font-style: italic;
 }
+
 
 /* Style for the network status indicator */
 
