--- a/static/Ranking.css
+++ b/static/Ranking.css
@@ -115,7 +115,9 @@ abbr {
             user-select: none;
 }
 
-#TimeView:not(.post_cont) #TimeView_selector:hover,
+/* #TimeView:not(.post_cont) #TimeView_selector:hover */
+#TimeView.pre_cont #TimeView_selector:hover,
+#TimeView.cont #TimeView_selector:hover,
 #TimeView_selector.open {
     margin: 2px;
     background-color: #EAEAEC;
