--- a/static/Ranking.css
+++ b/static/Ranking.css
@@ -5,7 +5,6 @@ body {
     background-color: #F6F6F6;
     background-image: -webkit-linear-gradient(#FFFFFF, #EDEDED);
     background-image:    -moz-linear-gradient(#FFFFFF, #EDEDED);
-    background-image:     -ms-linear-gradient(#FFFFFF, #EDEDED);
     background-image:      -o-linear-gradient(#FFFFFF, #EDEDED);
     background-image:         linear-gradient(#FFFFFF, #EDEDED);
     background-attachment: fixed;
@@ -81,7 +80,6 @@ abbr {
     margin: 2px 0 0 2px;
     padding: 0 3em;
     overflow-y: scroll;
-    -ms-overflow-y : scroll;
 }
 
 
@@ -312,7 +310,7 @@ div.team_search div.search_results div.body {
     bottom: 14px; /* 20px - 0.5em at a 12px font-size */
     left: 10px;
     right: 10px;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 div.team_search div.search_results div.body div.item {
@@ -344,8 +342,8 @@ div.team_search div.search_results div.body div.item label {
     width: 100%;
     height: 100%;
     padding: 0.25em 5px;
-    white-space: nowrap;
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
 }
 
@@ -409,10 +407,8 @@ div.team_search div.search_results div.body div.item img {
     box-shadow: 0 0 2px 0 #D2D2D4 inset;
     height: 24px;
     overflow: hidden;
-    text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    -ms-text-overflow: ellipsis;
     white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 #Scoreboard_body tr td.team {
